--- a/index.html
+++ b/index.html
@@ -24,6 +24,66 @@
         <a href="">Sign Up</a>
       </div>
     </header>
+    <main>
+      <section class="video-container">
+        <iframe src="https://www.youtube.com/embed/0AT0gy5gKAQ" title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </section>
+      <section class="text-container">
+        <a href="">About Us</a>
+        <h1>We scratch, build and play together</h1>
+        <p>Et has minim elitr intellegat. Mea aeterno eleifend antiopam ad, nam no suscipit quaerendum. At nam minimum
+          ponderum.Est audiam animal molestiae te. Ex duo eripuit mentitum.</p>
+        <a href="">Contact us</a>
+      </section>
+    </main>
+  </div>
+  <div class="white-wrapper">
+    <section class="about wrapper">
+      <section class="text-container">
+        <h2>Fostering creativity and innovationeam definiebas reformidans, exerci persecuti</h2>
+        <section class="services">
+          <div class="service">
+            <img src="./assets/box.png" alt="box">
+            <p>Et has minim elitr intellegat. Mea aeterno eleifend antiopam ad, nam no suscipit quaerendum.</p>
+          </div>
+          <div class="service">
+            <img src="./assets/truck.png" alt="truck">
+            <p>At nam minimum ponderum. Est audiam animal molestiae te. Ex duo eripuit mentitum.</p>
+          </div>
+        </section>
+      </section>
+      <section class="img-container">
+        <img src="./assets/image.png" alt="img placeholder">
+      </section>
+    </section>
+  </div>
+  <div class="wrapper">
+    <footer>
+      <h2>Grow your business with better Shipping</h2>
+      <p>We help the world’s leading organizations follow their shipping</p>
+      <section class="products">
+        <div class="product">
+          <img src="./assets/briefcase.png" alt="">
+          <h3>Shipping communication</h3>
+          <p>At eripuit signiferumque sea, vel ad mucius molestie, cu labitur iuvaret vulputate sed.</p>
+          <a href="">Discover</a>
+        </div>
+        <div class="product">
+          <img src="./assets/life_buoy.png" alt="">
+          <h3>Marketing</h3>
+          <p>At eripuit signiferumque sea, vel ad mucius molestie, cu labitur iuvaret vulputate sed.</p>
+          <a href="">Discover</a>
+        </div>
+        <div class="product">
+          <img src="./assets/tool.png" alt="">
+          <h3>Logistic performance</h3>
+          <p>At eripuit signiferumque sea, vel ad mucius molestie, cu labitur iuvaret vulputate sed.</p>
+          <a href="">Discover</a>
+        </div>
+      </section>
+    </footer>
   </div>
 </body>
 
